--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,16 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/zope-product
 include *.rst
-include *.cfg
-exclude .*.cfg
-
-recursive-include dataflake *
-
-global-exclude *.pyc
-global-exclude *.pyo
-
-include *.py
+include buildout.cfg
 include tox.ini
+
+recursive-include docs *.py
+recursive-include docs *.rst
+recursive-include docs *.txt
+recursive-include docs Makefile
+
+recursive-include src *.py
+include buildout4.cfg
+recursive-include src *.in
+recursive-include src *.txt
+recursive-include src *.zcml
