- remove support for Python 2.7, 3.5, 3.6 and Zope 4

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 # Generated from:
 # https://github.com/zopefoundation/meta/tree/master/config/zope-product
 include *.rst
+include *.txt
 include buildout.cfg
 include tox.ini
 
@@ -10,7 +11,6 @@ recursive-include docs *.txt
 recursive-include docs Makefile
 
 recursive-include src *.py
-include buildout4.cfg
 recursive-include src *.in
 recursive-include src *.txt
 recursive-include src *.zcml
